# dm-lite

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: release.yml
assets/: dm-lite-banner.zen  dm-lite-icon.zen
docs/superpowers/plans/: 2026-06-20-m1-completion.md
poc/: dm-lite.mjs  ma8e-stub.sh
src/: bootstrap.rs  client.rs  config.rs  embedder.rs  entry.rs  hooks.rs  iam.rs  main.rs  mcp.rs  migrate.rs  render.rs  server.rs  service.rs  setup.rs  skills.rs  sqlite.rs  store.rs  tools.rs  ui.rs  ui_graph.html  upgrade.rs  zvec_index.rs
templates/: README.md  behavioral-discipline.md  persona.md  save-discipline.md
