[package]
name = "dm-lite"
version = "0.1.0"
edition = "2021"
description = "daimon-memory v2: a small embedded typed memory engine with hybrid recall, behind a MemoryStore trait"
license = "MIT"

[[bin]]
name = "dmem"
path = "src/main.rs"

[features]
default = []
# zvec: dense-vector recall via Alibaba zvec (in-process). Ships a native libzvec_c_api
# (build.rs downloads or builds it). Off by default so the core stays pure-Rust + offline.
zvec = ["dep:zvec"]
# fastembed: real semantic embeddings (bge-small-en-v1.5, 384d) via ONNX/ort. Downloads the
# model on first use. Sets DIM=384; without it the placeholder HashEmbedder (256d) is used.
fastembed = ["dep:fastembed"]
# server: network API (axum + tokio) with multi-token bearer -> tenant auth, over the
# database-per-tenant store. Off by default so the embedded binary stays lean (no tokio).
server = ["dep:axum", "dep:tokio", "dep:tower"]

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
dirs = "5"
zvec = { git = "https://github.com/zvec-ai/zvec-rust.git", tag = "v0.5.0", optional = true }
fastembed = { version = "4", optional = true }
axum = { version = "0.7", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal"], optional = true }
tower = { version = "0.5", features = ["util"], optional = true }

[profile.release]
opt-level = 2
strip = true
