[package]
name = "dm-lite"
version = "0.1.0-rc.2"
edition = "2021"
description = "daimon-memory v2: a small embedded typed memory engine with hybrid recall, behind a MemoryStore trait"
license = "MIT"

[[bin]]
name = "dmem"
path = "src/main.rs"

[features]
default = []
# zvec: dense-vector recall via Alibaba zvec (in-process). Ships a native libzvec_c_api
# (build.rs downloads or builds it). Off by default so the core stays pure-Rust + offline.
zvec = ["dep:zvec"]
# fastembed: real semantic embeddings (bge-small-en-v1.5, 384d) via ONNX/ort. Downloads the
# model on first use. Sets DIM=384; without it the placeholder HashEmbedder (256d) is used.
# Implies `zvec`: the embedder is only consumed by the zvec vector path, so fastembed alone
# would pull the heavy ort/onnx tree for zero behavioral change.
fastembed = ["dep:fastembed", "zvec"]
# server: network API (axum + tokio) with multi-token bearer -> tenant auth, over the
# database-per-tenant store. Off by default so the embedded binary stays lean (no tokio).
server = ["dep:axum", "dep:tokio", "dep:tower"]
# wizard: interactive `dmem setup` first-run flow (dialoguer).
wizard = ["dep:dialoguer"]
# self-update: `dmem upgrade` in-place from GitHub Releases.
self-update = ["dep:self_update", "dep:semver"]
# dist: the friend-facing distribution build (what the release workflow ships).
dist = ["zvec", "fastembed", "server", "wizard", "self-update"]

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
dirs = "5"
zvec = { git = "https://github.com/zvec-ai/zvec-rust.git", tag = "v0.5.0", optional = true }
fastembed = { version = "4", optional = true }
axum = { version = "0.7", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal"], optional = true }
tower = { version = "0.5", features = ["util"], optional = true }
dialoguer = { version = "0.11", optional = true }
self_update = { version = "0.41", default-features = false, features = ["rustls", "archive-tar", "archive-zip", "compression-flate2"], optional = true }
semver = { version = "1", optional = true }

[profile.release]
opt-level = 2
strip = true
