[package]
name = "dm-lite"
version = "0.1.0-rc.8"
edition = "2021"
description = "daimon-memory v2: a small embedded typed memory engine with hybrid recall, behind a MemoryStore trait"
license = "MIT"

[[bin]]
name = "dmem"
path = "src/main.rs"

[features]
default = []
# zvec: dense-vector recall via Alibaba zvec (in-process). Ships a native libzvec_c_api
# (build.rs downloads or builds it). Off by default so the core stays pure-Rust + offline.
zvec = ["dep:zvec"]
# fastembed: real semantic embeddings (bge-small-en-v1.5, 384d) via ONNX/ort. Downloads the
# model on first use. Sets DIM=384; without it the placeholder HashEmbedder (256d) is used.
# Implies `zvec`: the embedder is only consumed by the zvec vector path, so fastembed alone
# would pull the heavy ort/onnx tree for zero behavioral change.
fastembed = ["dep:fastembed", "zvec"]
# model2vec: tiny STATIC embeddings (Model2Vec, e.g. potion-base-8M, 256d) - a token->vector
# lookup + mean-pool, NO neural net and NO ONNX runtime. Far smaller resident footprint than
# fastembed. Implies `zvec`. Mutually exclusive with fastembed at runtime (fastembed wins if both).
model2vec = ["dep:model2vec-rs", "zvec"]
candle = ["dep:candle-core","dep:candle-nn","dep:candle-transformers","dep:tokenizers","dep:hf-hub","zvec"]
# server: network API (axum + tokio) with multi-token bearer -> tenant auth and built-in TLS,
# over the database-per-tenant store. Off by default so the embedded binary stays lean.
server = ["dep:axum", "dep:axum-server", "dep:rcgen", "dep:rustls", "dep:tokio", "dep:tower", "dep:getrandom", "dep:sha2"]
# ui: optional local graph viewer (`dmem ui`) - an embedded offline single page over axum/tokio.
# Off by default; reuses axum + tokio, ships no CDN/runtime assets (the page is compiled in).
ui = ["dep:axum", "dep:tokio"]
# wizard: interactive `dmem setup` first-run flow (dialoguer).
wizard = ["dep:dialoguer"]
# self-update: `dmem upgrade` in-place from GitHub Releases.
self-update = ["dep:self_update", "dep:semver"]
# client: remote-client mode - talk to a remote `dmem serve` over HTTPS (reqwest + rustls).
client = ["dep:reqwest"]
# dist: the friend-facing distribution build (what the release workflow ships).
dist = ["zvec", "candle", "server", "wizard", "self-update", "client", "ui"]

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
toml_edit = "0.22"
serde_yaml_ng = "0.10"
anyhow = "1"
dirs = "5"
zvec = { git = "https://github.com/zvec-ai/zvec-rust.git", tag = "v0.5.0", optional = true }
fastembed = { version = "4", optional = true }
model2vec-rs = { version = "0.2", default-features = false, features = ["hf-hub", "fancy-regex"], optional = true }
candle-core = { version = "0.8", optional = true }
candle-nn = { version = "0.8", optional = true }
candle-transformers = { version = "0.8", optional = true }
tokenizers = { version = "0.21", optional = true }
hf-hub = { version = "0.4", optional = true }
axum = { version = "0.7", optional = true }
axum-server = { version = "0.7", features = ["tls-rustls"], optional = true }
rcgen = { version = "0.13", optional = true }
rustls = { version = "0.23", features = ["ring"], optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal"], optional = true }
tower = { version = "0.5", features = ["util"], optional = true }
dialoguer = { version = "0.11", optional = true }
self_update = { version = "0.41", default-features = false, features = ["rustls", "archive-tar", "archive-zip", "compression-flate2"], optional = true }
semver = { version = "1", optional = true }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "json"], optional = true }
getrandom = { version = "0.2", optional = true }
sha2 = { version = "0.10", optional = true }

[profile.release]
opt-level = 2
strip = true
